--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "pg-promise": "^10.11.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/morgan": "^1.9.3",
+        "@types/pg-promise": "^5.4.3",
         "nodemon": "^2.0.15"
     }
 }
