--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "morgan": "^1.10.0",
-        "pg-promise": "^10.11.1"
+        "pg": "^8.7.3",
+        "pg-hstore": "^2.3.4",
+        "pg-promise": "^10.11.1",
+        "sequelize": "^6.18.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
