--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
@@ -25,6 +26,7 @@
         "sequelize": "^6.18.0"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/morgan": "^1.9.3",
