Logjn - JWT - Permisos

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ PROD_HOST = 'http://localhost'
 
 DB_HOST = 'host'
 DB_PORT = 0000
-DB_NAME = "database"
+DB_NAME = 'database'
 DB_USER = 'user'
 DB_PASSWORD = "password"
+
+SECRET_KEY_JWT = 'llave privada'
