--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-validator": "^6.14.0",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "pg": "^8.7.3",
         "pg-hstore": "^2.3.4",
@@ -29,6 +30,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/pg-promise": "^5.4.3",
         "nodemon": "^2.0.15"
