--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/pg-promise": "^5.4.3",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
+        "eslint": "^8.14.0",
         "nodemon": "^2.0.15"
     }
 }
